--- a/wasp_bittorrent/Cargo.toml
+++ b/wasp_bittorrent/Cargo.toml
@@ -9,14 +9,15 @@ edition = "2021"
 serde = { version = "1.0.144", features = [ "derive" ] }
 serde_derive = "1.0.144"
 serde_bytes = "0.11.7"
-#bendy = { version = "0.3.3", features = [ "std", "serde" ] }
+serde_bencode = "0.2.3"
 anyhow = "1.0.63"
 thiserror = "1.0.33"
 hyper = { version = "0.14.20", features = [ "client", "http1", "tcp" ]}
+tokio = { version = "1.21.0", feature = "full" } #TODO: probably less features are needed
 urlencoding = "2.1.2"
-serde_bencode = "0.2.3"
 sha-1 = "0.10.0"
 sha2 = "0.10.5"
 semver = "1.0.13"
 rand = "0.8.5"
 log = "0.4.17"
+bytes = "1.2.1"
