--- a/wasp_bittorrent/Cargo.toml
+++ b/wasp_bittorrent/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.144", features = [ "derive" ] }
-serde_derive = "1.0.144"
+serde = { version = "1", features = [ "derive" ] }
+serde_derive = "1"
 serde_bytes = "0.11.7"
 serde_bencode = "0.2.3"
+url = { version = "2.4.0", features = ["serde"] }
+regex = "1.8.4"
+bendy = { version = "0.3.3", features = ["std", "serde"] }
+serde_qs = "0.12.0"
+
 anyhow = "1.0.63"
 thiserror = "1.0.33"
 hyper = { version = "0.14.20", features = [ "client", "http1", "tcp" ]}
@@ -23,3 +28,4 @@ semver = "1.0.13"
 rand = "0.8.5"
 log = "0.4.17"
 bytes = "1.2.1"
+reqwest = "0.11.18"
